tools/crates/vendor/toml_edit/tests/fixtures/invalid/control/comment-ff.stderr
TOML parse error at line 1, column 27
  |
1 | comment-ff   = "0x7f"   # 
  |                           ^
expected newline, `#`
